<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view2"
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_edit_user" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/selecione_idioma"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="OPÇÕES"
            app:titleMarginStart="@dimen/toolbar_margin_right"
            app:titleTextColor="@color/white"
            tools:targetApi="lollipop">

        </android.support.v7.widget.Toolbar>

        <SeekBar
            android:id="@+id/seekbar_icon_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:max="6"
            app:layout_constraintBottom_toBottomOf="@+id/txt_size_choose"
            app:layout_constraintEnd_toStartOf="@+id/txt_size_choose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_size_choose" />

        <TextView
            android:id="@+id/txt_size_choose"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/icone_background"
            android:contentDescription="@string/icon_image_example"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/escolha_tam_icones"
            android:textSize="@dimen/subtitle_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <View
            android:id="@+id/view"
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_size_choose" />

        <RadioGroup
            android:id="@+id/radio_idioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/radiobtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pt_br" />

            <RadioButton
                android:id="@+id/radiobtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_us" />

            <RadioButton
                android:id="@+id/radiobtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/es_ep" />

        </RadioGroup>

        <View
            android:id="@+id/view1"
            style="@style/divider"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_idioma" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/alterar_informa"
            android:textSize="@dimen/subtitle_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/img_user_edit"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/com_facebook_profile_picture_blank_portrait"
            app:civ_border_color="@color/gray_300"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <Button
            android:id="@+id/rotate_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_button_rotate"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/img_user_edit"
            app:layout_constraintEnd_toStartOf="@+id/img_user_edit" />

        <Button
            android:id="@+id/btn_select_avatar_edit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/escolher_foto"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/user_name_edited"
            app:layout_constraintStart_toEndOf="@+id/img_user_edit"
            app:layout_constraintTop_toTopOf="@+id/img_user_edit" />

        <Button
            android:id="@+id/btn_apagar_edit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/excluir_fotos"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_user_edit"
            app:layout_constraintEnd_toEndOf="@+id/user_name_edited"
            app:layout_constraintStart_toStartOf="@+id/btn_select_avatar_edit" />

        <EditText
            android:id="@+id/user_name_edited"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@id/img_user_edit" />

        <Button
            android:id="@+id/save_edit_user"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/editar_usuario"
            app:layout_constraintEnd_toEndOf="@+id/user_name_edited"
            app:layout_constraintStart_toStartOf="@+id/user_name_edited"
            app:layout_constraintTop_toBottomOf="@id/user_name_edited" />

        <TextView
            android:id="@+id/title_encerrar_loja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/encerrar_o_perfil_da_minha_loja"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2" />

        <ImageView
            android:id="@+id/img_store"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/title_encerrar_loja"
            app:layout_constraintTop_toBottomOf="@+id/title_encerrar_loja" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/antes_de_encerrar"
            app:layout_constraintEnd_toEndOf="@+id/title_encerrar_loja"
            app:layout_constraintStart_toEndOf="@+id/img_store"
            app:layout_constraintTop_toTopOf="@+id/img_store" />

        <Button
            android:id="@+id/btn_cancel_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/error"
            android:text="@string/excluir_loja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <View
            android:id="@+id/view3"
            style="@style/divider"
            android:layout_height="2dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_cancel_store" />


    </android.support.constraint.ConstraintLayout>
    </ScrollView>
