<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/logo_go"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_azul_sombra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/digite_seu_e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_go" />

    <EditText
        android:id="@+id/email_request_passwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="@string/exemplo_exemplo_com"
        app:layout_constraintEnd_toEndOf="@id/text_message"
        app:layout_constraintStart_toStartOf="@id/text_message"
        app:layout_constraintTop_toBottomOf="@id/text_message" />

    <Button
        android:id="@+id/btn_send_request"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="24dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/enviar_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_request_passwd"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>